# comfi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ViennaCLConfig.cmake  comfi.files  comfi.h  comfi.hpp  comfi.py  doxygen.cfg  fluxl.h  main.cpp  operators.cpp  operators.h  params.h  routines.cpp  types.cpp  types.h  util.cpp
doc/html/: annotated.html  classes.html  files.html  fluxl_8h_source.html  function_8h.html  function_8h_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  mhdsim_8h.html  mhdsim_8h_source.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemhdsim_1_1sol.html  namespacemhdsim_1_1types.html  namespaces.html  operators_8h.html  operators_8h_source.html  params_8h.html  params_8h_source.html  structBgData-members.html  structBgData.html  structOperators__vcl-members.html  structOperators__vcl.html  structmhdsim_1_1types_1_1BgData-members.html  structmhdsim_1_1types_1_1BgData.html  structmhdsim_1_1types_1_1Operators-members.html  structmhdsim_1_1types_1_1Operators.html  types_8h.html  types_8h_source.html
doc/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_1.js  variables_10.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js  (+7 more)
docs/: annotated.html  classcomfi_1_1types_1_1Context-members.html  classcomfi_1_1types_1_1Context.html  classes.html  comfi_8h.html  comfi_8h_source.html  comfi_8hpp.html  comfi_8hpp_source.html  files.html  fluxl_8h_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  md_README.html  menudata.js  namespacecomfi.html  namespacecomfi_1_1operators.html  namespacecomfi_1_1routines.html  namespacecomfi_1_1sol.html  namespacecomfi_1_1types.html  namespacecomfi_1_1util.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespaces.html  operators_8h.html  operators_8h_source.html  pages.html  params_8h.html  params_8h_source.html  structcomfi_1_1types_1_1BgData-members.html  structcomfi_1_1types_1_1BgData.html  structcomfi_1_1types_1_1Operators-members.html  structcomfi_1_1types_1_1Operators.html  (+2 more)
docs/html/: annotated.html  classcomfi_1_1types_1_1Context-members.html  classcomfi_1_1types_1_1Context.html  comfi_8h_source.html  functions.html  functions_func.html  globals.html  globals_vars.html  index.html  md_README.html  menudata.js  namespacecomfi_1_1operators.html  namespacecomfi_1_1util.html  namespacemembers_enum.html  namespacemembers_func.html  operators_8h_source.html  params_8h_source.html  structcomfi_1_1types_1_1Operators.html
docs/html/search/: all_13.js  all_2.js  all_6.js  all_8.js  all_d.js  classes_1.js  enumvalues_2.js  enumvalues_3.js  functions_1.js  functions_2.js  functions_3.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  variables_1.js  variables_11.js  variables_4.js  variables_6.js  variables_d.js  variables_f.js
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  (+21 more)
kernels_ocl/: element_max.c  phi.c  phi.c.minmod  phi.c.va1
plot-scripts/: comfi.py
share/: default.input.json
src/: main.cpp  operators.cpp  routines.cpp  types.cpp  util.cpp
